// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Core/HighlightedName Default 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 hExPlF sc-fXEqDS hyLvgQ"
  >
    <span
      class="sc-fKVqWL hOcWtv sc-iwjdpV csrXjq sc-jUosCB etlMUw sc-jQrDum eOTzdn"
    >
      Frontend Service
    </span>
  </div>
</div>
`;

exports[`Storyshots Core/HighlightedName With Custom Colors 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 hExPlF sc-fXEqDS hyLvgQ"
  >
    <span
      class="sc-fKVqWL hOcWtv sc-iwjdpV vGMJF sc-jUosCB etlMUw sc-jQrDum kVTMXA"
    >
      Frontend Service
    </span>
  </div>
</div>
`;
